// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > should render correctly when not toggled (desktop view) 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 backdrop-blur-3xl bg-opacity-50 z-5 md:hidden hidden"
  />
  <div
    class="fixed inset-y-0 left-0 z-5 bg-gray-200 text-gray-800 duration-300 ease-in-out
                    -translate-x-full md:translate-x-0
                    md:w-64 md:static md:block"
  >
    <nav
      class="flex flex-col p-2"
    >
      <a
        aria-current="page"
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-blue-800 text-white"
        data-discover="true"
        href="/"
      >
        <i
          class="bi bi-house-door"
        />
         
        <span
          class="font-bold"
        >
          Home
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/transcript-summary"
      >
        <i
          class="bi bi-card-list"
        />
         
        <span
          class="font-bold"
        >
          Transcript Summary
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/seller-details"
      >
        <i
          class="bi bi-person"
        />
         
        <span
          class="font-bold"
        >
          Seller Details
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/coaching-dashboard"
      >
        <i
          class="bi bi-clipboard-check"
        />
         
        <span
          class="font-bold"
        >
          Coaching Dashboard
        </span>
      </a>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Sidebar > should render correctly when toggled (mobile overlay view) 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 backdrop-blur-3xl bg-opacity-50 z-5 md:hidden block"
  />
  <div
    class="fixed inset-y-0 left-0 z-5 bg-gray-200 text-gray-800 duration-300 ease-in-out
                    translate-x-0 md:translate-x-0
                    md:w-64 md:static md:block"
  >
    <nav
      class="flex flex-col p-2"
    >
      <a
        aria-current="page"
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-blue-800 text-white"
        data-discover="true"
        href="/"
      >
        <i
          class="bi bi-house-door"
        />
         
        <span
          class="font-bold"
        >
          Home
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/transcript-summary"
      >
        <i
          class="bi bi-card-list"
        />
         
        <span
          class="font-bold"
        >
          Transcript Summary
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/seller-details"
      >
        <i
          class="bi bi-person"
        />
         
        <span
          class="font-bold"
        >
          Seller Details
        </span>
      </a>
      <a
        class="block border mt-1 ml-1 mb-1 p-2 no-underline rounded bg-transparent text-blue-800"
        data-discover="true"
        href="/coaching-dashboard"
      >
        <i
          class="bi bi-clipboard-check"
        />
         
        <span
          class="font-bold"
        >
          Coaching Dashboard
        </span>
      </a>
    </nav>
  </div>
</DocumentFragment>
`;
